# bahari

./: .gitignore  README.md
bahari/: Makefile  README.md
bahari/include/: chat_utils.h
bahari/src/: chat_utils.c  client.c  server.c
poc-demo/socketClient/: CMakeLists.txt  client.c
poc-demo/socketServer/: .gitignore  main_serv.c
poc-demo/socketUtils/: sock_utils.c  sock_utils.h
surreal/: Makefile  manifest.md
surreal/include/: chat_utils.h
surreal/src/: chat_utils.c  main.c
